Add Kaggle dataset integration and loaders for e-commerce data
- Updated .env.example to include Kaggle configuration variables.
- Enhanced README.md with details on the multi-agent system for data integration and automated setup.
- Added loaders for Retail Rocket, Instacart, and Olist datasets, including base loader implementation.
- Implemented scripts for downloading datasets from Kaggle and loading them into Kafka.
- Introduced validation and comparison scripts for data quality checks.
- Included integration and unit tests for the new loaders and data streaming functionality.

--- a/.env.example
+++ b/.env.example
@@ -70,6 +70,15 @@ METRICS_PORT=9090
 FRAUD_THRESHOLD=0.85
 
 # ============================================================================
+# KAGGLE CONFIGURATION (Pour télécharger les datasets)
+# ============================================================================
+# Kaggle username
+KAGGLE_USERNAME=
+
+# Kaggle API token
+KAGGLE_API_TOKEN=
+
+# ============================================================================
 # ENVIRONMENT
 # ============================================================================
 # Environment: development, staging, production
