--- a/ingestion/requirements.txt
+++ b/ingestion/requirements.txt
@@ -15,6 +15,9 @@ python-dotenv==1.0.1
 # Parsing YAML
 PyYAML==6.0.1
 
+# Kaggle API (pour télécharger les datasets)
+kaggle==1.6.12
+
 # ============================================================================
 # Dépendances pour les tests (TIER 3)
 # ============================================================================
