Enhance Docker and configuration setup for data platform services
- Updated .env.example to include Docker Compose configuration details for project name and project path.
- Refactored docker-compose.yml to improve service definitions, including Zookeeper, Kafka, Schema Registry, and added Redis and Flink services.
- Adjusted health checks and environment variables for Kafka and Schema Registry to ensure proper connectivity and functionality.
- Introduced a new Dockerfile for Flink processing with Python dependencies.
- Added a new fraud detection job in Flink to process events from Kafka and output results to Redis and Kafka.
- Enhanced constants.py with new configurations for Kafka, Redis, and Flink settings to support the updated architecture.

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,25 @@ ENVIRONMENT=development
 
 # Mode debug
 DEBUG=false
+
+# ============================================================================
+# DOCKER COMPOSE CONFIGURATION
+# ============================================================================
+# Nom du projet Docker (préfixe pour les conteneurs)
+# Exemple: streaming-kafka-1, streaming-redis-1, etc.
+COMPOSE_PROJECT_NAME=streaming
+
+# Chemin absolu vers le répertoire du projet
+#
+# Remplacer par votre chemin local:
+# Windows:
+#   D:/bureau/grand projet/PROJET 1
+#   ou C:/Users/YourName/projects/PROJET 1
+# Mac/Linux:
+#   /home/user/projects/PROJET 1
+#   ou /Users/YourName/projects/PROJET 1
+# Serveur:
+#   /opt/apps/PROJET 1
+#
+# NOTE: Utiliser des slashes (/) même sur Windows, PAS de backslashes (\)
+PROJECT_PATH=
