Add lakehouse architecture and initial setup
- Updated .gitignore to include backup files.
- Refactored docker-compose.yml by removing the version declaration.
- Added new documentation files for DBT guides, including DBT, Fraud Detection, and Lakehouse guides.
- Introduced the lakehouse module with initial setup for Iceberg and Spark jobs.
- Created DBT project structure with models for bronze, silver, and gold layers, including SQL files for data processing and tests for data integrity.
- Enhanced Dockerfile for processing with Kafka connector installation.
- Added integration tests for the lakehouse pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -82,12 +82,13 @@ data/*.json
 docker-compose.override.yml
 
 # ============================================================================
-# Temporary Files
+# Temporary Files & Backups
 # ============================================================================
 tmp/
 tmpclaude-*/
 *.tmp
 *.bak
+backups/
 
 # ============================================================================
 # OS Files
