--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,6 +180,26 @@ services:
       timeout: 5s
       retries: 5
 
+  # MinIO (S3-compatible object storage for Iceberg)
+  minio:
+    image: minio/minio:latest
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9010:9000"
+      - "9001:9001"
+    networks:
+      - data-platform
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
 networks:
   data-platform:
     driver: bridge
@@ -188,3 +208,4 @@ volumes:
   redis_data:
   flink_checkpoints:
   flink_savepoints:
+  minio_data:
